--- a/_posts/2017-03-02-Genomic-Sampling.Rmd
+++ b/_posts/2017-03-02-Genomic-Sampling.Rmd
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: 
+title: Genomic Sampling
 categories: 
 share: true
 comments: true
-tag: [ ]
+tag: [ICH]
 output:
   xaringan::moon_reader:
     lib_dir: libs
